:bug: try to prevent tag-wrapping again

--- a/css/partials/tags.css
+++ b/css/partials/tags.css
@@ -3,6 +3,7 @@
  */
 a[rel="tag"] {
   color: #333;
+  white-space: nowrap;
 }
 
 /**
